--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,10 @@ dependencies:
   flutter:
     sdk: flutter
   provider: ^6.0.2
+  firebase_core: ^1.17.0
+  cloud_firestore: ^3.1.15
+  firebase_auth: ^3.3.18
+  google_sign_in: ^5.3.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
